adjusted html tags and placement

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,12 @@ label {
     margin: 50px;
 }
 
+/* h2 styles for the formula of the areas */
 h2 {
     font-size: 50px;
     margin: 50px;
 }
+
 
 
 
